--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+  animated_text_kit: ^2.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
