--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   animated_text_kit: ^2.2.0
+  firebase_core: ^0.4.5
+  cloud_firestore: ^0.13.7
+  firebase_auth: ^0.16.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
